testsuite/bsc.bugs/bluespec_inc/b235/Bug235-5.bsv.bsc-out.expected
checking package dependencies
Error: "Bug235-5.bsv", line 7, column 5: (P0070)
  Expression block (starting around here) missing return value
