testsuite/bsc.bugs/bluespec_inc/b235/Bug235-5.bsv
interface Foo;
  method ActionValue#(Bool) m();
endinterface: Foo

module foo(Foo);
  method m();
    begin
    end
  endmethod
endmodule: foo

